k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
  name: lukeserver
spec:
  selector:
    app: lukeserver
  ports:
    - name: server
      port: 3000
      protocol: TCP
    - name: data
      port: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lukeserver
  labels:
    app: lukeserver
spec:
  selector:
    matchLabels:
      app: lukeserver
  template:
    metadata:
      labels:
        app: lukeserver
    spec:
      containers:
        - name: lukeserver
          image: lrussell1999/lukeserverv2
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/data"
              name: storage
          resources:
            requests:
              cpu: "100m"
        - name: nginx
          image: nginx
          volumeMounts:
            - mountPath: "/usr/share/nginx/html/data"
              name: storage
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: "100m"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: lukeserver-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luke-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: lukespirit.duckdns.org
    http:
      paths:
      - path: /lukespirit/(.*)
        pathType: Prefix
        backend:
          service:
            name: lukeserver
            port:
              number: 3000
      - path: /(data/.*)
        pathType: Prefix
        backend:
          service:
            name: lukeserver
            port:
              number: 80
---
